--- a/ui/src/main/AndroidManifest.xml
+++ b/ui/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".tabAndviewpager.MainActivity" />
+        <activity android:name=".DragActivity" />
 
-        <activity android:name=".DragActivity">
+        <activity android:name=".itemDecoration.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
