--- a/ui/src/main/AndroidManifest.xml
+++ b/ui/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:theme="@style/AppTheme">
         <activity android:name=".tabAndviewpager.MainActivity" />
         <activity android:name=".DragActivity" />
-
         <activity android:name=".itemDecoration.MainActivity">
+
+        </activity>
+        <activity android:name=".DemoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
