--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.41'
+    ext.kotlin_version = '1.2.51'
+
+    ext.support_version = '27.1.1'
+    ext.constraint_version = '1.1.2'
+
+    ext.minSdk_Version = 16
+    ext.targetSdk_Version = 27
 
     repositories {
         google()
