--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,9 @@
-include ':app', ':svga', ':rv'
-include ':lottie'
 include ':abilityview'
+include ':app'
+include ':kotlin'
+include ':lottie'
+include ':rv'
+include ':shock'
+include ':svga'
 include ':textview'
 include ':ui'
-include ':shock'
-include ':kotlin'
