--- a/kotlin/build.gradle
+++ b/kotlin/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 android {
-    compileSdkVersion 27
+    compileSdkVersion targetSdk_Version
 
     defaultConfig {
         applicationId "com.xiong.kotlin"
-        minSdkVersion 16
-        targetSdkVersion 27
+        minSdkVersion minSdk_Version
+        targetSdkVersion targetSdk_Version
         versionCode 1
         versionName "1.0"
 
